[package]
name = "day5-part2"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.12.0"
rayon = "1.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_day5"
harness = false